--- a/README
+++ b/README
@@ -1,8 +1,6 @@
-A repository for tracking, sharing and opening source code developed for the Android Developer Group, a part of Enigma of Østfold Community College.
+A repository for tracking, sharing and opening source code developed for the Android Developer Group, a part of Enigma of Ã˜stfold Community College.
 
 My personal results from the Enigma Android developer challenge will be published here as examples for people to read and develop further.
-
-Visit http://enigma.hiof.no/forumdisplay.php?4-Android for the groups forum (Norwegian).
 
 All files (including but not limited to software, graphics, and music) are free unless otherwise stated: you can redistribute them and/or modify them under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
 
